--- a/helpdesk-frontend/src/app/shared/components/header/header.scss
+++ b/helpdesk-frontend/src/app/shared/components/header/header.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0 2rem;
   height: 64px;
-  background-color: #1e293b; // Azul oscuro profesional
+  background-color: #8c63ce; // Azul oscuro profesional
   color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
